--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,6 +21,7 @@
                   id='length'
                   min='4'
                   max='16'
+                  value='{{options.length}}'
                 />
                 <small class='text-muted form-text'>Length is available between
                   4 ~ 16</small>
@@ -37,6 +38,8 @@
                     class='form-check-input'
                     id='lowercase'
                     name='lowercase'
+                    {{! value={{options.lowercase}} {{! 結果這個不能用 }} 
+                    {{#if options.lowercase}}checked{{/if}}  {{!這個才行}} 
                   />
                   <label class='form-check-label' for='lowercase'>(e.g. abcdefg)</label>
                 </div>
@@ -53,6 +56,7 @@
                     class='form-check-input'
                     id='uppercase'
                     name='uppercase'
+                    {{#if options.uppercase}}checked{{/if}}
                   />
                   <label class='form-check-label' for='uppercase'>(e.g. ABCDEFG)</label>
                 </div>
@@ -69,6 +73,7 @@
                     class='form-check-input'
                     id='numbers'
                     name='numbers'
+                    {{#if options.numbers}}checked{{/if}}
                   />
                   <label class='form-check-label' for='numbers'>(e.g. 123456)</label>
                 </div>
@@ -85,6 +90,7 @@
                     class='form-check-input'
                     id='symbols'
                     name='symbols'
+                    {{#if options.symbols}}checked{{/if}}
                   />
                   <label
                     class='form-check-label'
@@ -99,16 +105,19 @@
                 Exclude Characters
               </label>
               <div class='col-md-8'>
-                <input
-                  type='text'
-                  name='excludeCharacters'
-                  class='form-control'
-                  id='exclude-characters'
-                />
+                <input type='text' name='excludeCharacters' class='form-control' id='exclude-characters' value='{{options.excludeCharacters}}'/>
                 <small class='text-muted form-text'>These characters will not
                   appear in the password</small>
               </div>
             </div>
+
+            {{! Show PWs }}
+            {{#if pw}}
+              <div class='alert alert-info' role='alert'>
+                <span class='mr-2'>Your password is:</span>
+                <code>{{pw}}</code>
+              </div>
+            {{/if}}
 
             <button class='btn btn-success' type='submit'>Generate Password</button>
           </form>
